# baremetal-hi

./: .craftrc  .gitignore  .travis.yml  CMakeLists.txt  Craftfile  Craftr.link-template.ld  LICENSE_BSD2.txt  Makefile  README.md  arm-eabi-cross_file.txt  link.cmake.ld  link.craftr.ld  link.ld  link.make.ld  link.meson.ld  meson.build  meson_options.txt  startup.S  startup.s  test.c  toolchain-arm-eabi.cmake
tools/: args.py  binutils-install.py  gcc-install.py  install-ninja  install-ninja.py  install-qemu  installargs.py  ninja-install.py  qemu-install.py  utils.py
